nova_tests/plan108_4/neg/neg_method_needs_at.nv
// EXPECT_COMPILE_ERROR E_PROTO_METHOD_NEEDS_AT
// Plan 108.4 Ф.4: NEG — protocol method without @ → E_PROTO_METHOD_NEEDS_AT
// Bare identifier in protocol body must fail parse with this error.

#no_prelude
module neg.neg_method_needs_at

type Badproto protocol {
    // Missing @ prefix — bare ident is not allowed in protocol declaration.
    next() -> int
}
